# cmakeTemplate

./: CMakeLists.txt  ProjectConfig.h.in  README.md  main.cpp
dbus/: CMakeLists.txt
dbus/include/: NodeInfo.h
dbus/interface/: CuxsQDbusTypes.h  Events.xml
dbus/src/: NodeInfo.cpp
include/: myclass.hpp
interface_lib/: CMakeLists.txt
interface_lib/include/: AutoCounter.h
src/: myclass.cpp
static_lib/: CMakeLists.txt
static_lib/include/: Log.h
static_lib/src/: Log.cpp
